fix seciton references

--- a/body.tex
+++ b/body.tex
@@ -2,7 +2,7 @@
 
 
 This document provides a guide to the \VRO \   approach to annual planning.
-See also the the operations proposal \citeds{LDO-31}.
+See also the the operations proposal \citeds{RDO-018}.
 In operations, there is no formal \gls{EVMS} required from the funding Agencies so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through a level of effort process.
 
 The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system. The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  Teams record their day to day work in Jira and overall progress is monitored automatically through Smartsheet and reported through our managing organizations.
@@ -265,8 +265,7 @@ The following fields must be filled out when defining a new milestone:
 The Program Coordinators will ensure that the milestones that have been defined are correctly linked together in the Smartsheet, so that their epics appear nested beneath them.
 
 
-\section{Short Term Planning}
-\label{sec:cycle-plan}
+\section{Short Term Planning} \label{sec:cycle-plan}
 
 Short term planning is carried out in blocks referred to as \glspl{cycle}, which (usually) last for six months.
 Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue. Any team member can find the milestones in Jira.
@@ -291,8 +290,7 @@ While developing the \gls{cycle}, please:
 Obviously, ensure that the program of work being developed is achievable by your team in the time available: ultimately, you will want to compare the number of \glspl{SP} your team is able to deliver (\S\ref{sec:effort}) with the sum of the \glspl{SP} in the \glspl{epic} you have scheduled (\S\ref{sec:planning-epics}), while also considering the skills and availability of your team.
 It is better to under-commit and over-deliver than vice-versa, but, ideally, aim to estimate accurately.
 
-\subsubsection{Defining Epics}
-\label{sec:planning-epics}
+\subsubsection{Defining Epics} \label{sec:planning-epics}
 
 The plan for a six month \gls{cycle} fundamentally consists of a set of resource loaded \glspl{epic} defined in \gls{JIRA}.
 Each \gls{epic} loaded into the plan must have this minimum set of fields filled in:
@@ -327,8 +325,7 @@ In fact, it is only required to provide a staff assignment in terms of ``resourc
 In practice, to ensure your team is evenly loaded, it is usually necessary to break it down to named individuals.
 
 
-\subsubsection{Scheduling Research Work}
-\label{sec:research}
+\subsubsection{Scheduling Research Work} \label{sec:research}
 
 %who gets research time of this type? All developers or just scientists. This is confusing since most people will think in terms of scientific research. NOIRLab engineers will get professional development time.
 As discussed in \S\ref{sec:long-term-research}, research is sometimes required
@@ -343,8 +340,7 @@ breakthrough will occur.
 We therefore schedule research in \gls{timebox}ed \glspl{epic}: we allocate a certain amount of time based on the resources available, rather than on an estimate of time to completion.
 However, note that these \gls{timebox}ed \glspl{epic} should still provide concrete deliverables: they are not open-ended ``buckets'' as discussed elsewhere.
 
-\subsubsection{Bucket Epics}
-\label{sec:bucket}
+\subsubsection{Bucket Epics} \label{sec:bucket}
 
 Some work is ``emergent'': we can predict in advance that it will be necessary, but we cannot predict exactly what form it will take.
 The typical example of this is fixing bugs: we can reasonably assume that bugs will be discovered in the codebase and will need to be addressed, but we cannot predict in advance what those bugs will be.
@@ -361,8 +357,7 @@ That is, it is not in general possible to define an \gls{epic} which handles bug
 Instead, it may be necessary to define a different bucket \gls{epic} for each leaf of the \gls{WBS} tree.
 
 
-\subsection{Closing the Cycle}
-\label{sec:cycle-close}
+\subsection{Closing the Cycle} \label{sec:cycle-close}
 
 Assuming everything has gone to plan, by the end of a \gls{cycle} all deliverables should be verified and the corresponding \glspl{epic} should be marked as \texttt{done}.
 Marking an \gls{epic} as \texttt{done} asserts that the concrete deliverable associated with the \gls{epic} has been provided.
@@ -374,8 +369,7 @@ Obviously, this will impact the labor available for other activities in the next
 (This does not apply to bucket \glspl{epic} (\S\ref{sec:bucket}), which are, by their nature, \gls{timebox}ed within the \gls{cycle}).
 
 
-\section{Execution}
-\label{sec:execution}
+\section{Execution} \label{sec:execution}
 
 Having defined the plan for a \gls{cycle} following \S\ref{sec:cycle-plan}, we (RDP and RPF) execute it by means of a series of month-long sprints.
 In this section, we detail the procedures teams are expected to follow during the \gls{cycle}.
