--- a/body.tex
+++ b/body.tex
@@ -12,7 +12,7 @@ The Agile method is a set of practices that allow the ability to adapt and respo
 To the extent possible, we focus on the people doing the work and how they work together.
 
 This framework allows the multidisciplinary Rubin team to operate the facility and generate nightly data products while continuously improving efficiency of workflows (``Kanban'' style\footnote{Kanban is a visual system for managing work as it moves through a process.
-Kanban is a concept related to lean and just-in-time (JIT) production, where it is used as a scheduling system that tells you what to produce, when to produce it, and how much to produce.}),
+Kanban is a concept related to lean and \gls{JIT} production, where it is used as a scheduling system that tells you what to produce, when to produce it, and how much to produce.}),
 as well as iteratively responding to user feedback on a longer timescale to maximize the scientific benefit of annual data releases (``scrum'' style\footnote{https:\/\/en.wikipedia.org\/wiki\/Scrum\_(software\_development)}).
 
 Some examples that will use the kanban style are the daily functionality checks needed for nightly operations of the telescope or the regular monitoring of progress toward achieving milestones and reporting to governing organizations.
