--- a/aglossary.tex
+++ b/aglossary.tex
@@ -50,6 +50,7 @@
 \newacronym{IDF} {IDF} {Interim Data Facility}
 \newacronym{IT} {IT} {Information Technology}
 \newglossaryentry{JIRA} {name={JIRA}, description={issue tracking product (not an acronym but a truncation of Gojira the Japanese name for Godzilla)}}
+\newacronym{JIT} {JIT} {Just In Time}
 \newacronym{L1} {L1} {Lens 1}
 \newacronym{L2} {L2} {Lens 2}
 \newacronym{L3} {L3} {Lens 3}
