--- a/body.tex
+++ b/body.tex
@@ -1,28 +1,19 @@
 \section{Introduction}
 
+This document provides a guide to the \VRO\ approach to work management and annual planning.
+See the operations proposal \citeds{RDO-018} for a description of the full scope and high level goals of the program.
+There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through an agile process.
 
-This document provides a guide to the \VRO \   approach to annual planning.
-See also the the operations proposal \citeds{RDO-018}.
-In operations, there is no formal \gls{EVMS} required from the funding Agencies so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through a level of effort process.
+The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
+The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
+Teams record their day to day work in Jira and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
 
-The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system. The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  Teams record their day to day work in Jira and overall progress is monitored automatically through Smartsheet and reported through our managing organizations.
+This framework allows the multidisciplinary Rubin teams to operate the facility and generate nightly data products while continuously improving efficiency of workflows,
+as well as iteratively responding to user community feedback on a longer timescale to maximize the scientific benefit of annual data releases.
+Examples include optimizing the observing strategy as the survey progresses, improving algorithms in response to the user community feedback, 
+and other incremental work needed to produce the annual data releases.
 
-There are a few main ways work will be managed, some within an Agile framework (particularly for data release planning).
-The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.
-To the extent possible, we focus on the people doing the work and how they work together.
-
-This framework allows the multidisciplinary Rubin team to operate the facility and generate nightly data products while continuously improving efficiency of workflows (``Kanban'' style\footnote{Kanban is a visual system for managing work as it moves through a process.
-Kanban is a concept related to lean and \gls{JIT} production, where it is used as a scheduling system that tells you what to produce, when to produce it, and how much to produce.}),
-as well as iteratively responding to user feedback on a longer timescale to maximize the scientific benefit of annual data releases (``scrum'' style\footnote{https:\/\/en.wikipedia.org\/wiki\/Scrum\_(software\_development)}).
-
-Some examples that will use the kanban style are the daily functionality checks needed for nightly operations of the telescope or the regular monitoring of progress toward achieving milestones and reporting to governing organizations.
-For either of these examples, we will maintain a set of tasks that need to be performed in sequence every cycle.
-Each task could be described individually inside a JIRA ticket and grouped together in a set, so that any person doing the daily checks, for example, could be assigned the set of tasks, open the tickets, comment on results, pass additional work onto others as needed, and mark the tickets done as the work is completed.
-In this way, the completion of the checklist of tasks is transparent and traceable and can be monitored, and the efficiency of the steps in the flow of work can be improved upon continuously.
-
-Examples of scrum-like work include improving algorithms in response to the user community feedback, optimizing the observing strategy as the survey progresses, and other incremental work needed to produce the annual data releases.
-
-In this document, we lay out the procedural details for how we define and carry out plans, following the framework described above, to deliver on our milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate.
+In this document, we lay out the procedural details for how we define and carry out annual plans, effectively track work progress to ensure delivery of milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate.
 
 \section{Rubin Operations Leadership and Annual Reporting}
 \label{sec:contacts}
