--- a/body.tex
+++ b/body.tex
@@ -1,5 +1,7 @@
 \section{Introduction}
 
+#Here's a suggestion 
+
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal \citeds{RDO-018} for a description of the full scope and high level goals of the program.
 There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through an agile process.
