--- a/body.tex
+++ b/body.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-#Here's a suggestion 
+% Here's a suggestion 
 
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal \citeds{RDO-018} for a description of the full scope and high level goals of the program.
