--- a/body.tex
+++ b/body.tex
@@ -4,7 +4,7 @@
 
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal \citeds{RDO-018} for a description of the full scope and high level goals of the program.
-There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through an agile process.
+There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on an annual basis and effort towards that schedule of activities is tracked through an agile process.
 
 The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
 The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
@@ -57,7 +57,7 @@ Individual roles on operations are level 4.
 
 Thus:
 
-% PJM: The WBS Activities table down to level 3 is a very big table. Do we need the table below to name the dept/team/group as well as the description of the activity? I think we can introduce these items in teh table even though they are not referred to until the next subsection.
+% We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
 \begin{longtable}[]{@{}lll@{}}
 \hline
 \gls{WBS} & Description \tabularnewline
@@ -101,6 +101,9 @@ However, as above, we generally aspire to minimize the fraction of \gls{LOE} for
 \label{sec:effort}
 
 \subsection{Basic Assumptions}
+
+% Note: there calculations are true for Construction but need to be updated for Rubin Operations since NOIRLab uses 1744 hours per year (83%) for scientists, scientists could have 20% or 50% for research, and research time is charged to RSS. 
+
 Rubin Operations assumes that a full-time individual works for a total of 1,800 hours per year: this figure is \emph{after} all vacations, sick leave, etc are taken into account.
 The Rubin operations partners, SLAC and NOIRLab, may have different definitions for tracking their staff time; Rubin operations uses 1,800 hours per year as a fiducial value for effort estimation purposes.
 
@@ -196,7 +199,8 @@ Some Level 2 milestones {\it may} be reported to the agencies as defined by the 
 \end{description}
 
 Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is important that these be delivered on time and to specification.
-Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue.
+Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue. Note the change control process is under development as a Pre-Operations activity. 
+
 Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is important: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
 Epics should work to achieve milestones i.e. they may be blocking issues on the milestones.
