--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -11,7 +11,7 @@
 \input{aglossary.tex}
 \makeglossaries
 
-\title{Management principles and use of Jira for Rubin Operations}
+\title{Work Management Principles and Processes for Rubin Operations}
 
 % Optional subtitle
 % \setDocSubtitle{A subtitle}
@@ -29,7 +29,7 @@ William O'Mullane,  Amanda Bauer, Robert Blum, Phil Marshall
 % \setDocCurator{The Curator of this Document}
 
 \setDocAbstract{%
-This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and Level of Effort work as well. This document describes how effort towards an annually-planned schedule is tracked. 
+This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity. This document describes how effort towards an annually-planned schedule is tracked. 
 }
 
 % Change history defined here.
