--- a/body.tex
+++ b/body.tex
@@ -1,14 +1,12 @@
 \section{Introduction}
 
-% Here's a suggestion 
-
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal \citeds{RDO-018} for a description of the full scope and high level goals of the program.
 There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on an annual basis and effort towards that schedule of activities is tracked through an agile process.
 
-The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
+The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
 The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
-Teams record their day to day work in Jira and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
+Teams record their day to day work in \gls{JIRA} and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
 
 This framework allows the multidisciplinary Rubin teams to operate the facility and generate nightly data products while continuously improving efficiency of workflows,
 as well as iteratively responding to user community feedback on a longer timescale to maximize the scientific benefit of annual data releases.
@@ -24,9 +22,9 @@ Rubin Observatory is a Program of NSF's NOIRLab.
 The Rubin Observatory \ \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is Amanda Bauer, and the Deputy \gls{Director} for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO Operations.
 
-The Program Coordinator is Cathy Petry.
-She monitors the budgets and maintains details within the NOIRLab budgeting system.
-She assists in developing the annual Program Operating Plan (POP), tracking milestones and reporting on progress.
+The Head of Operations is Ranpal Gil and the Program Coordinator is Cathy Petry.
+They monitor the budget and maintain details within the NOIRLab budgeting system.
+They assist in developing the annual Program Operating Plan (POP), tracking milestones and reporting on progress.
 
 On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks.
 
@@ -51,7 +49,7 @@ Each operational Department is led by an Associate Director (AD).
 \label{sec:wbs}
 
 The \gls{WBS} provides a hierarchical description of the activity-based organization of Rubin.
-The WBS provides a useful structure to organize Rubin Operations and plan annual work around.
+The WBS provides a useful structure around which to organize Rubin Operations activity and plan annual work.
 Rubin is the level 1 of the WBS, the departments are level 2, and teams within the departments are level 3.
 Individual roles on operations are level 4.
 
