--- a/body.tex
+++ b/body.tex
@@ -60,15 +60,50 @@ Thus:
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
 \begin{longtable}[]{@{}lll@{}}
 \hline
-\gls{WBS} & Description \tabularnewline
+L2 \\ L3 \gls{WBS} & Description \tabularnewline
 \hline
 \endhead
 
 1 & Rubin Director's Office  \tabularnewline
+1.1 & Rubin Director's Office  \tabularnewline
+1.2 & Safety  \tabularnewline
+1.3.1 & Program Operations  \tabularnewline
+1.3.2 & Administrative Operations  \tabularnewline
+1.3.3 & Portfolio Management  \tabularnewline
+1.3.4 & Communications  \tabularnewline
+1.3.5 & Document Management  \tabularnewline
+1.3.6 & 5-Year Planning  \tabularnewline
+1.4 & In-Kind Program Coordination  \tabularnewline
+1.8 & Legacy Survey of Space and Time  \tabularnewline
+1.10 & Sustainability  \tabularnewline
+1.11 & Site Protection  \tabularnewline
 2 & Rubin Observatory Operations  \tabularnewline
+2.1 & Observatory Operations Management  \tabularnewline
+2.2 & Observatory Science Operations  \tabularnewline
+2.3 & Observatory Software  \tabularnewline
+2.4 & Summit Operations  \tabularnewline
+2.5 & Nighttime Operations  \tabularnewline
+2.6 & Engineering  \tabularnewline
 3 & Rubin Data Production \tabularnewline
+3.1 & Data Production Management  \tabularnewline
+3.2 & Infrastructure and Support  \tabularnewline
+3.3 & Data and Processing Architecture  \tabularnewline
+% 3.4 & Execution (disabled)  \tabularnewline
+3.5 & Algorithms and Pipelines  \tabularnewline
+3.6 & Service Quality and Reliability Engineering  \tabularnewline
+3.7 & DevOps Support  \tabularnewline
+3.8 & Data Security  \tabularnewline
 4 & Rubin System Performance  \tabularnewline
+4.1 & System Performance Management  \tabularnewline
+4.2 & Verification and Validation  \tabularnewline
+4.3 & Community Engagement  \tabularnewline
+4.4 & Survey Scheduling  \tabularnewline
+4.5 & Systems Engineering  \tabularnewline
 5 & Rubin Education and Public Outreach \tabularnewline
+5.1 & EPO Management  \tabularnewline
+5.2 & EPO Technical  \tabularnewline
+5.3 & Education  \tabularnewline
+5.4 & Outreach  \tabularnewline
 
 \hline
 \end{longtable}
