--- a/body.tex
+++ b/body.tex
@@ -41,7 +41,7 @@ Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level 
 Detailed activity planning, including defining smaller chunks of work as lower level milestones, continues though the year in advance of the next year.
 This detailed activity planning is the subject of this document.
 
-\section{Formal Organizational Structure}
+\section{Organizational Structure}
 \label{sec:structure}
 
 Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach).
@@ -52,58 +52,58 @@ Each operational Department is led by an Associate Director (AD).
 
 The \gls{WBS} provides a hierarchical description of the activity-based organization of Rubin.
 The WBS provides a useful structure to organize Rubin Operations and plan annual work around.
-Rubin is the level 1 of the WBS, the departments are level 2, and teams within the departments are level 3.
-Individual roles on operations are level 4.
+Rubin is level 1 of the WBS, the departments are level 2, and teams within the departments are level 3 and in the case of Program Operations, level 4.
+Individual roles on operations are defined at the lowest level.
 
 Thus:
 
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
-\begin{longtable}[]{@{}lll@{}}
+\begin{longtable}[]{@{}llll@{}}
 \hline
-L2 \\ L3 \gls{WBS} & Description \tabularnewline
+L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 \hline
 \endhead
 
-1 & Rubin Director's Office  \tabularnewline
-1.1 & Rubin Director's Office  \tabularnewline
-1.2 & Safety  \tabularnewline
-1.3.1 & Program Operations  \tabularnewline
-1.3.2 & Administrative Operations  \tabularnewline
-1.3.3 & Portfolio Management  \tabularnewline
-1.3.4 & Communications  \tabularnewline
-1.3.5 & Document Management  \tabularnewline
-1.3.6 & 5-Year Planning  \tabularnewline
-1.4 & In-Kind Program Coordination  \tabularnewline
-1.8 & Legacy Survey of Space and Time  \tabularnewline
-1.10 & Sustainability  \tabularnewline
-1.11 & Site Protection  \tabularnewline
-2 & Rubin Observatory Operations  \tabularnewline
-2.1 & Observatory Operations Management  \tabularnewline
-2.2 & Observatory Science Operations  \tabularnewline
-2.3 & Observatory Software  \tabularnewline
-2.4 & Summit Operations  \tabularnewline
-2.5 & Nighttime Operations  \tabularnewline
-2.6 & Engineering  \tabularnewline
-3 & Rubin Data Production \tabularnewline
-3.1 & Data Production Management  \tabularnewline
-3.2 & Infrastructure and Support  \tabularnewline
-3.3 & Data and Processing Architecture  \tabularnewline
-% 3.4 & Execution (disabled)  \tabularnewline
-3.5 & Algorithms and Pipelines  \tabularnewline
-3.6 & Service Quality and Reliability Engineering  \tabularnewline
-3.7 & DevOps Support  \tabularnewline
-3.8 & Data Security  \tabularnewline
-4 & Rubin System Performance  \tabularnewline
-4.1 & System Performance Management  \tabularnewline
-4.2 & Verification and Validation  \tabularnewline
-4.3 & Community Engagement  \tabularnewline
-4.4 & Survey Scheduling  \tabularnewline
-4.5 & Systems Engineering  \tabularnewline
-5 & Rubin Education and Public Outreach \tabularnewline
-5.1 & EPO Management  \tabularnewline
-5.2 & EPO Technical  \tabularnewline
-5.3 & Education  \tabularnewline
-5.4 & Outreach  \tabularnewline
+1 & & Rubin Director's Office  \tabularnewline
+  & 1.1 & Rubin Director's Office  \tabularnewline
+  & 1.2 & Safety  \tabularnewline
+  & 1.3.1 & Program Operations  \tabularnewline
+  & 1.3.2 & Administrative Operations  \tabularnewline
+  & 1.3.3 & Portfolio Management  \tabularnewline
+  & 1.3.4 & Communications  \tabularnewline
+  & 1.3.5 & Document Management  \tabularnewline
+  & 1.3.6 & 5-Year Planning  \tabularnewline
+  & 1.4 & In-Kind Program Coordination  \tabularnewline
+  & 1.8 & Legacy Survey of Space and Time  \tabularnewline
+  & 1.10 & Sustainability  \tabularnewline
+  & 1.11 & Site Protection  \tabularnewline
+2 & & Rubin Observatory Operations  \tabularnewline
+  & 2.1 & Observatory Operations Management  \tabularnewline
+  & 2.2 & Observatory Science Operations  \tabularnewline
+  & 2.3 & Observatory Software  \tabularnewline
+  & 2.4 & Summit Operations  \tabularnewline
+  & 2.5 & Nighttime Operations  \tabularnewline
+  & 2.6 & Engineering  \tabularnewline
+3 & & Rubin Data Production \tabularnewline
+  & 3.1 & Data Production Management  \tabularnewline
+  & 3.2 & Infrastructure and Support  \tabularnewline
+  & 3.3 & Data and Processing Architecture  \tabularnewline
+%   & 3.4 & Execution (disabled)  \tabularnewline
+  & 3.5 & Algorithms and Pipelines  \tabularnewline
+  & 3.6 & Service Quality and Reliability Engineering  \tabularnewline
+  & 3.7 & DevOps Support  \tabularnewline
+  & 3.8 & Data Security  \tabularnewline
+4 & & Rubin System Performance  \tabularnewline
+  & 4.1 & System Performance Management  \tabularnewline
+  & 4.2 & Verification and Validation  \tabularnewline
+  & 4.3 & Community Engagement  \tabularnewline
+  & 4.4 & Survey Scheduling  \tabularnewline
+  & 4.5 & Systems Engineering  \tabularnewline
+5 & & Rubin Education and Public Outreach \tabularnewline
+  & 5.1 & EPO Management  \tabularnewline
+  & 5.2 & EPO Technical  \tabularnewline
+  & 5.3 & Education  \tabularnewline
+  & 5.4 & Outreach  \tabularnewline
 
 \hline
 \end{longtable}
@@ -111,7 +111,7 @@ L2 \\ L3 \gls{WBS} & Description \tabularnewline
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
 
-Detailed work is planned in advance of each financial year at the team level.
+Detailed work is planned in advance of each fiscal year at the team level.
 Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity.
 The highest level milestones are reported regularly throughout the fiscal year to SLAC, AURA, NSF and DOE.
 
