--- a/body.tex
+++ b/body.tex
@@ -58,7 +58,7 @@ Individual roles on operations are defined at the lowest level.
 Thus:
 
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
-\begin{longtable}[]{@{}llll@{}}
+\begin{longtable}[]{@{}lll@{}}
 \hline
 L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 \hline
