--- a/body.tex
+++ b/body.tex
@@ -68,12 +68,13 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 1 & & Rubin Director's Office  \tabularnewline
   & 1.1 & Rubin Director's Office  \tabularnewline
   & 1.2 & Safety  \tabularnewline
-  & 1.3.1 & Program Operations  \tabularnewline
-  & 1.3.2 & Administrative Operations  \tabularnewline
-  & 1.3.3 & Portfolio Management  \tabularnewline
-  & 1.3.4 & Communications  \tabularnewline
-  & 1.3.5 & Document Management  \tabularnewline
-  & 1.3.6 & 5-Year Planning  \tabularnewline
+  & 1.3 & Program Operations  \tabularnewline
+%  & 1.3.1 & Program Operations  \tabularnewline
+%  & 1.3.2 & Administrative Operations  \tabularnewline
+%  & 1.3.3 & Portfolio Management  \tabularnewline
+%  & 1.3.4 & Communications  \tabularnewline
+%  & 1.3.5 & Document Management  \tabularnewline
+%  & 1.3.6 & 5-Year Planning  \tabularnewline
   & 1.4 & In-Kind Program Coordination  \tabularnewline
   & 1.8 & Legacy Survey of Space and Time  \tabularnewline
   & 1.10 & Sustainability  \tabularnewline
