--- a/body.tex
+++ b/body.tex
@@ -112,6 +112,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
+%Footnote:  Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.
 
 Detailed work is planned in advance of each fiscal year at the team level.
 Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity.
@@ -122,7 +123,7 @@ The highest level milestones are reported regularly throughout the fiscal year t
 \label{sec:loe}
 
 There are two types of activities (or epics) that are planned:  activities that result in a deliverable, and level of effort (or support) activities.
-Progress can be tracked on activities with a deliverable by computing the percent complete based on completed stories linked to the epic.
+Progress can be tracked on activities with a deliverable by computing the fraction of the effort that is complete (percent complete) based on completed stories linked to the epic.
 Progress on \gls{LOE} work is assumed to progress proportionally with the passage of time.
 
 \gls{LOE} activities include attending meetings, reporting on milestones, or taking part in other activities which do not directly map to a deliverable or product.
@@ -138,22 +139,26 @@ As an example, a first-order estimate is that developers will spent 30\% of thei
 
 \subsection{Basic Assumptions}
 
-% Note: there calculations are true for Construction but need to be updated for Rubin Operations since NOIRLab uses 1744 hours per year (83%) for scientists, scientists could have 20% or 50% for research, and research time is charged to RSS. 
+% Note: These calculations are true for Construction but need to be updated for Rubin Operations since NOIRLab uses 1744 hours per year (83%) for scientists, scientists could have 20% or 50% for research, and research time and Training, Admin & DEI time is charged to RSS.  For Engineers, Training, Admin & DEI time is charged to ES.
 
 Rubin Operations assumes that a full-time individual works for a total of 1,800 hours per year: this figure is \emph{after} all vacations, sick leave, etc are taken into account.
 The Rubin Operations partners, SLAC and NOIRLab, may have different definitions for tracking their staff time; Rubin Operations uses 1,800 hours per year as a fiducial value for effort estimation purposes.
 
 In general, staff in Rubin Operations roles at a given expected full-time equivalent (FTE) effort level are expected to devote that fraction of their total work time to \RO.
 
+Staff in ``scientist'' or ``engineer'' roles can allocate up to 2% of their time to training, 2% to administrative activities and 1% to outreach and DEI activities.
+% The party line has been that staff has up to 3% for Outreach and DEI but I don't know how that resolves to the budget numbers described in the previous sentence
+
 Staff in ``scientist'' roles are expected to spend 20\% of their time on personal research (see the Rubin Operations Plan for details).
 That is, scientists are expected to devote 1,440 hours per
 year to operations activity, and the remainder of their time to personal research.
+% Some scientists are 50% 
 
-Personal research time is charged to Rubin along with the operations role time, the logic being that
-scientists in operations roles must be engaged in research as well in order to succeed in their operations role.
-Rubin expects to pay the full rate for an individual with research time who contributes 1,440 hours to
-operations.
-This is handled through indirect rates at both NOIRLab and direct charges to research accounts at SLAC.
+Personal research time is charged to NOIRLab's Research and Science Services (RSS) and is prorated for staff who are fractionally allocated to Rubin Operations. 
+Training, administrative, and outreach and DEI time is charged to either RSS or ES depending on where staff will move into NOIRLab.
+
+Rubin expects to pay the full rate for any scientist or engineer who contributes full-time or fractionally to operations.
+This is handled through indirect rates at NOIRLab and direct charges to research accounts at SLAC.
 Science time is included in the subcontracts of our partners at affiliated institutions through indirect charges
 similar to the case for NOIRLab.
 
