--- a/body.tex
+++ b/body.tex
@@ -113,7 +113,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 \end{longtable}
 
 % I will have to look up how to implement a footnote in a longtable
-\Footnote{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
+% \Footnote{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
 
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
