--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -11,13 +11,13 @@
 \input{aglossary.tex}
 \makeglossaries
 
-\title{Work Management Principles and Processes for Rubin Operations}
+\title{Work Management Systems for Rubin Operations}
 
 % Optional subtitle
 % \setDocSubtitle{A subtitle}
 
 \author{%
-William O'Mullane,  Amanda Bauer, Robert Blum, Phil Marshall
+William O'Mullane, Amanda Bauer, Robert Blum, Phil Marshall, Cathy Petry
 }
 
 \setDocRef{RTN-005}
