--- a/body.tex
+++ b/body.tex
@@ -110,14 +110,13 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
   & 5.4 & Outreach  \tabularnewline
 
 \hline
-\end{longtable}
 
-% I will have to look up how to implement a footnote in a longtable
-% \Footnote{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
+\footnote{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
+
+\end{longtable}
 
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
-.
 
 Detailed work is planned in advance of each fiscal year at the team level.
 Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity.
