--- a/body.tex
+++ b/body.tex
@@ -70,7 +70,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 1 & & Rubin Director's Office  \tabularnewline
   & 1.1 & Director's Office  \tabularnewline
   & 1.2 & Safety  \tabularnewline
-  & 1.3 & Program Operations  \tabularnewline
+  & 1.3 & Program Operations\footnotemark[1]  \tabularnewline
 %  & 1.3.1 & Program Operations  \tabularnewline
 %  & 1.3.2 & Administrative Operations  \tabularnewline
 %  & 1.3.3 & Portfolio Management  \tabularnewline
@@ -111,7 +111,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 
 \hline
 
-\footnote{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
+\footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
 
 \end{longtable}
 
